# faberlang.dev

./: .gitignore  AGENTS.md  CONTENT-PLAN.md  Cargo.toml  README.md  package-lock.json  package.json  wrangler.jsonc
.github/workflows/: deploy-pages.yml
assets/: index.css  index.html  llms-full.txt  llms.txt  robots.txt  sitemap.xml
assets/.well-known/: faber-language.json
assets/reports/: rc1-private-preview-checklist.md  rc1-provenance-manifest.json  stage-1-leakage-check.md
cloudflare-worker/src/: index.js
docs/: AGENT-FIRST-DOCUMENTATION-WEBSITE-PLAN.md  CAMPAIGN.md  LAUNCH-AND-GROWTH-CAMPAIGN.md  head-cpo-product-story.md  stage-0-positioning-brief.md  stage-1-public-contract-matrix.md
docs/deployment/: cloudflare-workers.md
docs/design/: speculum-document-ir.md
generator/: STAGE-1-LOG.md  faber.toml  locales.toml
generator/proofs/: tensor.md
generator/scripts/: build-site.sh  check-internal-links.py  check-leakage-gate.py  generate-portal.py  generate-redirects.py  generate-releases-page.py  generate-search-index.py  generate-sitemap.py  generate-target-matrix.py  inject-canonical.py  inject-chrome.py  inject-skip-link.py  locales_registry.py  localize-markdown.py  render-corpus-batch.sh  render-corpus.sh  render-llms.py  render.sh  strip-empty-sources.py  sync-report.py  sync-translate.py  sync_lib.py  translate-queue.py  validate-fences.sh  validate-html-literals.sh
generator/src/: anchor.fab  corpus.fab  document_ir.fab  fence.fab  frontmatter.fab  html.fab  link_prefix.fab  (+5 more)
src/: main.rs
static/: llms-full.txt  llms.txt  robots.txt
(+1169 files in other folders)
