[package]
name = "faber-web"
version = "0.1.0"
edition = "2021"
description = "Faber language documentation website — agent-first discovery and versioned docs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
